[package]
name = "rocketsim"
version = "0.1.3"
edition = "2021"
publish = false
exclude = [".git*", "venv/", "assets", "pytest.py", "rustfmt.toml"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }
rocketsim_rs = { version = "0.1.0", default-features = false }

[profile.release]
lto = true
strip = true
panic = "abort"
