[package]
name = "rocketsim"
version = "0.3.0"
edition = "2021"
publish = false
exclude = [".git*", "venv/", "assets", "pytest.py", "rustfmt.toml"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.18.0", features = ["abi3-py37", "extension-module"] }
rocketsim_rs = "0.10.0"

[profile.release]
lto = true
strip = true
panic = "abort"
